--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 *.deb
 **/.venv_ccf_sandbox
 **/.venv_ccf_verify_receipt
+**/.venv_ccf_banking_app_client
 **/workspace/
 **/node_modules
 package-lock.json
