--- a/banking-app/governance/nodes/cchost_config_virtual_js.json
+++ b/banking-app/governance/nodes/cchost_config_virtual_js.json
@@ -1,7 +1,7 @@
 {
   "enclave": {
     "file": "/usr/lib/ccf/libjs_generic.virtual.so",
-    "type": "Virtual",
+    "type": "Debug",
     "platform": "Virtual"
   },
   "network": {
